--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,108 @@
  body {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: roboto;
+     display: flex;
+     flex-direction: column;
+     box-sizing: border-box;
+     padding: 0;
+     margin: 0;
+     font-family: roboto;
  }
 
  nav {
-    display: flex;
-    align-items: center;
+     display: flex;
+     align-items: center;
  }
 
  header {
-    background-color: #1F2937;
-    margin-top: 0;
-    margin-bottom: 0;
+     background-color: #1F2937;
+     margin-top: 0;
+     margin-bottom: 0;
  }
 
  .header-logo {
-    color: #F9FAF8;
-    font-size: 24px;
-    font-weight: 800;
+     color: #F9FAF8;
+     font-size: 24px;
+     font-weight: 800;
  }
 
- nav ul{
+ nav ul {
+     display: flex;
+     list-style: none;
+     gap: 10px;
+     width: 100%;
+     color: #E5E7EB;
+     font-size: 18px;
+ }
+
+ .push-right {
+     display: flex;
+     justify-content: flex-end;
+     margin-left: auto;
+     margin-right: 10%;
+ }
+
+ .presentation {
+     background-color: #1F2937;
+     color: #FFF;
+     display: flex;
+     gap: 20px;
+     padding-bottom: 50px;
+ }
+
+ .presentation-content {
+     flex: 1;
+     padding-left: 20%;
+ }
+
+ .presentation-title {
+     font-size: 48px;
+     font-weight: 900;
+     color: #F9FAF8
+ }
+
+ .presentation-img {
+     flex: 1;
+     padding-right: 20%;
+     padding-bottom: 40px;
+ }
+
+ .presentation-img img {
+     width: 100%;
+     height: 100%;
+     background-color: gray;
+ }
+
+ .info-title {
+    text-align: center;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+ }
+
+ .info-content {
     display: flex;
-    list-style: none;
-    gap: 10px;
-    width: 100%;
-    color: #E5E7EB;
-    font-size: 18px;
+ }
+
+ .card {
+    width: 100px;
+ }
+
+ .quote {
+    background-color: #E5E7EB;
+    display: flex;
+ }
+
+ .quote-text {
+    font-size: 36px;
+    font-style: italic;
     
  }
 
-.push-right {
-    display: flex;
-    justify-content: flex-end;
-    margin-left: auto;
-    margin-right: 10%;
-}
-
-.presentation {
+ footer {
     background-color: #1F2937;
     color: #FFF;
     display: flex;
-    gap: 12px;
-    width: 100%;
     justify-content: center;
+    align-items: center;
+    height: 60px;
 }
-.presentation-content {
-    flex: 1;
-    padding-left: 20%;
-}
-
-.presentation-text {
-
-}
-
-.presentation-title {
-    font-size: 48px;
-    font-weight: 900;
-    color: #F9FAF8
-}
-
-.presentation-img {
-
-flex: 1;
-padding-right: 20%;
-
-
-
-}
-
-.presentation-img img {
-    width: 300px;
-    height: 240px;
-}
-
 
