--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,19 @@
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-stretch: normal;
+    src: url(https://fonts.gstatic.com/s/roboto/v47/KFOMCnqEu92Fr1ME7kSn66aGLdTylUAMQXC89YmC2DPNWubEbVmUiAo.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+ 
  body {
      display: flex;
      flex-direction: column;
      box-sizing: border-box;
      padding: 0;
      margin: 0;
-     font-family: roboto;
+     font-family: Roboto;
  }
 
  nav {
@@ -22,6 +31,7 @@
      color: #F9FAF8;
      font-size: 24px;
      font-weight: 800;
+     padding-left: 35%;
  }
 
  nav ul {
@@ -38,6 +48,11 @@
      justify-content: flex-end;
      margin-left: auto;
      margin-right: 10%;
+     color: #E5E7EB;
+ }
+
+ .push-right li {
+    margin-left: 15px;
  }
 
  .presentation {
@@ -45,12 +60,13 @@
      color: #FFF;
      display: flex;
      gap: 20px;
-     padding-bottom: 50px;
+     padding-bottom: 100px;
+     padding-top: 100px;
  }
 
  .presentation-content {
      flex: 1;
-     padding-left: 20%;
+     margin-left: 240px;
  }
 
  .presentation-title {
@@ -59,41 +75,133 @@
      color: #F9FAF8
  }
 
+ button {
+    background-color: #3882F6;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 8px;
+    margin-top: 10px;
+    height: 35px;
+    width: 115px;
+    font-size: 1.1em;
+    font-weight: 600;
+ }
+
  .presentation-img {
      flex: 1;
-     padding-right: 20%;
+     padding-right: 100px;
+     margin-left: 90px;
      padding-bottom: 40px;
  }
 
  .presentation-img img {
-     width: 100%;
-     height: 100%;
+     width: 440px;
+     height: 210px;
      background-color: gray;
+    
  }
+
+.info {
+    padding: 40px 15px;
+}
 
  .info-title {
     text-align: center;
     font-size: 36px;
     color: #1F2937;
     font-weight: 900;
+    padding: 50px 20px;
  }
 
  .info-content {
     display: flex;
+    justify-content: center;
+    gap: 25px;
+    flex-wrap: wrap;
  }
 
  .card {
-    width: 100px;
+    width: 200px;
+    text-align: center;
+    margin-bottom: 30px;
+    color: #717070;
+    font-size: 1.3em;
+ }
+
+ .frame {
+    width: 150px;
+    height: 150px;
+    border-style: solid;
+    border-radius: 10%;
+    border-width: 4px;
+    border-color: #3882D6;
+    margin: auto;
+    margin-bottom: 8px;
  }
 
  .quote {
     background-color: #E5E7EB;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 100px;
+    padding-bottom: 40px;
  }
 
  .quote-text {
+    color: #1F2937;
     font-size: 36px;
     font-style: italic;
+    text-align: left;
+    max-width: 800px;
+ }
+
+ .author {
+    align-self: flex-end;
+    text-align: center;
+    width: 800px;
+ }
+
+.signup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+}
+ 
+ .signup-content {
+    width: 70%;
+    height: 45%;
+    padding: 50px;
+    background-color: #3882F6;
+    border-radius: 8px;
+    display: flex;
+    color: #F9FAF8;
+    align-items: center;
+ }
+
+ #signup-text {
+    margin-left: 100px;
+ }
+
+.signup h1 {
+    padding: 0;
+    margin: 0;
+}
+
+.signup p {
+    padding: 0;
+    margin: 0;
+}
+
+ .signup-content>button {
+    border-color: #F9FAF8;
+    border-width: 3px;
+    margin-left: auto;
+    margin-right: 50px;
     
  }
 
@@ -103,6 +211,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    height: 80px;
 }
 
