--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@
     font-size: 1.3em;
  }
 
- .frame {
+ .frame img {
     width: 150px;
     height: 150px;
     border-style: solid;
@@ -150,7 +150,7 @@
     padding-top: 100px;
     padding-bottom: 40px;
  }
-
+ 
  .quote-text {
     color: #1F2937;
     font-size: 36px;
