--- a/css/style.css
+++ b/css/style.css
@@ -130,11 +130,11 @@
     font-size: 1.3em;
  }
 
- .frame img {
+ .frame {
     width: 150px;
     height: 150px;
     border-style: solid;
-    border-radius: 10%;
+    border-radius: 5px;
     border-width: 4px;
     border-color: #3882D6;
     margin: auto;
